// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiPageTemplate fullHeight is rendered with noscroll 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone"
  >
    <div
      class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--plain ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="ouiPageContentBody ouiPage--paddingLarge ouiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate fullHeight is rendered with true 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone"
  >
    <div
      class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--plain ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="ouiPageContentBody ouiPage--paddingLarge ouiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiPage ouiPage--grow ouiPageTemplate testClass1 testClass2"
  data-test-subj="test subject string"
  style="min-height:460px"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone"
  >
    <div
      class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--plain ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="ouiPageContentBody ouiPage--paddingLarge ouiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate restrict width can be set to a custom number 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone"
  >
    <div
      class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--plain ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="ouiPageContentBody ouiPage--paddingLarge ouiPage--restrictWidth-custom"
        style="max-width:1024px"
      />
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate restrict width can be turned off 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone"
  >
    <div
      class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--plain ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="ouiPageContentBody ouiPage--paddingLarge"
      />
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template centeredBody is rendered 1`] = `
<div
  class="ouiPage ouiPage--paddingLarge ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone ouiPageBody--restrictWidth-default"
  >
    <div
      class="ouiPageBody ouiPageBody--borderRadiusNone"
    >
      <div
        class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow ouiPageContent ouiPageContent--verticalCenter ouiPageContent--horizontalCenter"
        role="main"
      >
        <div
          class="ouiPageContentBody ouiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template centeredBody is rendered with pageBodyProps 1`] = `
<div
  class="ouiPage ouiPage--paddingLarge ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="ouiPageBody ouiPageBody--borderRadiusNone ouiPageBody--restrictWidth-default testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <div
      class="ouiPageBody ouiPageBody--borderRadiusNone"
    >
      <div
        class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow ouiPageContent ouiPageContent--verticalCenter ouiPageContent--horizontalCenter"
        role="main"
      >
        <div
          class="ouiPageContentBody ouiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template centeredBody is rendered with pageContentBodyProps 1`] = `
<div
  class="ouiPage ouiPage--paddingLarge ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone ouiPageBody--restrictWidth-default"
  >
    <div
      class="ouiPageBody ouiPageBody--borderRadiusNone"
    >
      <div
        class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow ouiPageContent ouiPageContent--verticalCenter ouiPageContent--horizontalCenter"
        role="main"
      >
        <div
          aria-label="aria-label"
          class="ouiPageContentBody ouiPage--restrictWidth-default testClass1 testClass2"
          data-test-subj="test subject string"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template centeredBody is rendered with pageContentProps 1`] = `
<div
  class="ouiPage ouiPage--paddingLarge ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone ouiPageBody--restrictWidth-default"
  >
    <div
      class="ouiPageBody ouiPageBody--borderRadiusNone"
    >
      <div
        aria-label="aria-label"
        class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow ouiPageContent ouiPageContent--verticalCenter ouiPageContent--horizontalCenter testClass1 testClass2"
        data-test-subj="test subject string"
        role="main"
      >
        <div
          class="ouiPageContentBody ouiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template centeredBody is rendered with pageHeader 1`] = `
<div
  class="ouiPage ouiPage--paddingLarge ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone ouiPageBody--restrictWidth-default"
  >
    <header
      aria-label="aria-label"
      class="ouiPageHeader ouiPageHeader--bottomBorder ouiPageHeader--responsive ouiPageHeader--center testClass1 testClass2"
      data-test-subj="test subject string"
      title="Page title"
    />
    <div
      class="ouiPageBody ouiPageBody--borderRadiusNone"
    >
      <div
        class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow ouiPageContent ouiPageContent--verticalCenter ouiPageContent--horizontalCenter"
        role="main"
      >
        <div
          class="ouiPageContentBody ouiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template centeredBody minHeight is rendered 1`] = `
<div
  class="ouiPage ouiPage--paddingLarge ouiPage--grow ouiPageTemplate"
  style="min-height:40vh"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone ouiPageBody--restrictWidth-default"
  >
    <div
      class="ouiPageBody ouiPageBody--borderRadiusNone"
    >
      <div
        class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow ouiPageContent ouiPageContent--verticalCenter ouiPageContent--horizontalCenter"
        role="main"
      >
        <div
          class="ouiPageContentBody ouiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template centeredBody paddingSize is rendered 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone ouiPageBody--restrictWidth-default"
  >
    <div
      class="ouiPageBody ouiPageBody--borderRadiusNone"
    >
      <div
        class="ouiPanel ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow ouiPageContent ouiPageContent--verticalCenter ouiPageContent--horizontalCenter"
        role="main"
      >
        <div
          class="ouiPageContentBody ouiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template centeredBody style is rendered 1`] = `
<div
  class="ouiPage ouiPage--paddingLarge ouiPage--grow ouiPageTemplate"
  style="min-height:460px;max-height:100vh"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone ouiPageBody--restrictWidth-default"
  >
    <div
      class="ouiPageBody ouiPageBody--borderRadiusNone"
    >
      <div
        class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow ouiPageContent ouiPageContent--verticalCenter ouiPageContent--horizontalCenter"
        role="main"
      >
        <div
          class="ouiPageContentBody ouiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template centeredBody with pageSideBar is rendered 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    class="ouiPageSideBar ouiPageSideBar--paddingLarge ouiPageSideBar--sticky"
  >
    Side Bar
  </div>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone ouiPageBody--paddingLarge"
  >
    <div
      class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow ouiPageContent ouiPageContent--verticalCenter ouiPageContent--horizontalCenter"
      role="main"
    >
      <div
        class="ouiPageContentBody ouiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template centeredBody with pageSideBar is rendered with pageSideBarProps 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="ouiPageSideBar ouiPageSideBar--paddingLarge ouiPageSideBar--sticky testClass1 testClass2"
    data-test-subj="test subject string"
  >
    Side Bar
  </div>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone ouiPageBody--paddingLarge"
  >
    <div
      class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow ouiPageContent ouiPageContent--verticalCenter ouiPageContent--horizontalCenter"
      role="main"
    >
      <div
        class="ouiPageContentBody ouiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template centeredContent is rendered 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone"
  >
    <div
      class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusNone ouiPanel--plain ouiPanel--noShadow ouiPageContent ouiPageContent--borderRadiusNone"
      style="display:flex"
    >
      <div
        class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusMedium ouiPanel--subdued ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--verticalCenter ouiPageContent--horizontalCenter"
        role="main"
      >
        <div
          class="ouiPageContentBody ouiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template centeredContent is rendered with pageBodyProps 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="ouiPageBody ouiPageBody--borderRadiusNone testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <div
      class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusNone ouiPanel--plain ouiPanel--noShadow ouiPageContent ouiPageContent--borderRadiusNone"
      style="display:flex"
    >
      <div
        class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusMedium ouiPanel--subdued ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--verticalCenter ouiPageContent--horizontalCenter"
        role="main"
      >
        <div
          class="ouiPageContentBody ouiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template centeredContent is rendered with pageContentBodyProps 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone"
  >
    <div
      class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusNone ouiPanel--plain ouiPanel--noShadow ouiPageContent ouiPageContent--borderRadiusNone"
      style="display:flex"
    >
      <div
        class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusMedium ouiPanel--subdued ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--verticalCenter ouiPageContent--horizontalCenter"
        role="main"
      >
        <div
          aria-label="aria-label"
          class="ouiPageContentBody ouiPage--restrictWidth-default testClass1 testClass2"
          data-test-subj="test subject string"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template centeredContent is rendered with pageContentProps 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone"
  >
    <div
      class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusNone ouiPanel--plain ouiPanel--noShadow ouiPageContent ouiPageContent--borderRadiusNone"
      style="display:flex"
    >
      <div
        aria-label="aria-label"
        class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusMedium ouiPanel--subdued ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--verticalCenter ouiPageContent--horizontalCenter testClass1 testClass2"
        data-test-subj="test subject string"
        role="main"
      >
        <div
          class="ouiPageContentBody ouiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template centeredContent is rendered with pageHeader 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone"
  >
    <header
      aria-label="aria-label"
      class="ouiPageHeader ouiPageHeader--paddingLarge ouiPageHeader--responsive ouiPage--restrictWidth-default ouiPageHeader--center testClass1 testClass2"
      data-test-subj="test subject string"
      title="Page title"
    />
    <div
      class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusNone ouiPanel--plain ouiPanel--noShadow ouiPageContent ouiPageContent--borderRadiusNone"
      style="display:flex"
    >
      <div
        class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusMedium ouiPanel--subdued ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--verticalCenter ouiPageContent--horizontalCenter"
        role="main"
      >
        <div
          class="ouiPageContentBody ouiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template centeredContent minHeight is rendered 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:40vh"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone"
  >
    <div
      class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusNone ouiPanel--plain ouiPanel--noShadow ouiPageContent ouiPageContent--borderRadiusNone"
      style="display:flex"
    >
      <div
        class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusMedium ouiPanel--subdued ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--verticalCenter ouiPageContent--horizontalCenter"
        role="main"
      >
        <div
          class="ouiPageContentBody ouiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template centeredContent paddingSize is rendered 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone"
  >
    <div
      class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--plain ouiPanel--noShadow ouiPageContent ouiPageContent--borderRadiusNone"
      style="display:flex"
    >
      <div
        class="ouiPanel ouiPanel--borderRadiusMedium ouiPanel--subdued ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--verticalCenter ouiPageContent--horizontalCenter"
        role="main"
      >
        <div
          class="ouiPageContentBody ouiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template centeredContent style is rendered 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:460px;max-height:100vh"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone"
  >
    <div
      class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusNone ouiPanel--plain ouiPanel--noShadow ouiPageContent ouiPageContent--borderRadiusNone"
      style="display:flex"
    >
      <div
        class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusMedium ouiPanel--subdued ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--verticalCenter ouiPageContent--horizontalCenter"
        role="main"
      >
        <div
          class="ouiPageContentBody ouiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template centeredContent with pageSideBar is rendered 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    class="ouiPageSideBar ouiPageSideBar--paddingLarge ouiPageSideBar--sticky"
  >
    Side Bar
  </div>
  <div
    class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusNone ouiPanel--plain ouiPanel--hasShadow ouiPageBody ouiPageBody--borderRadiusNone ouiPageBody--paddingLarge"
  >
    <div
      class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusMedium ouiPanel--subdued ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--verticalCenter ouiPageContent--horizontalCenter"
      role="main"
    >
      <div
        class="ouiPageContentBody ouiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template centeredContent with pageSideBar is rendered with pageSideBarProps 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="ouiPageSideBar ouiPageSideBar--paddingLarge ouiPageSideBar--sticky testClass1 testClass2"
    data-test-subj="test subject string"
  >
    Side Bar
  </div>
  <div
    class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusNone ouiPanel--plain ouiPanel--hasShadow ouiPageBody ouiPageBody--borderRadiusNone ouiPageBody--paddingLarge"
  >
    <div
      class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusMedium ouiPanel--subdued ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--verticalCenter ouiPageContent--horizontalCenter"
      role="main"
    >
      <div
        class="ouiPageContentBody ouiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template default is rendered 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone"
  >
    <div
      class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--plain ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="ouiPageContentBody ouiPage--paddingLarge ouiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template default is rendered with pageBodyProps 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="ouiPageBody ouiPageBody--borderRadiusNone testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <div
      class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--plain ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="ouiPageContentBody ouiPage--paddingLarge ouiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template default is rendered with pageContentBodyProps 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone"
  >
    <div
      class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--plain ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        aria-label="aria-label"
        class="ouiPageContentBody ouiPage--paddingLarge ouiPage--restrictWidth-default testClass1 testClass2"
        data-test-subj="test subject string"
      />
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template default is rendered with pageContentProps 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone"
  >
    <div
      aria-label="aria-label"
      class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--plain ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--borderRadiusNone testClass1 testClass2"
      data-test-subj="test subject string"
      role="main"
    >
      <div
        class="ouiPageContentBody ouiPage--paddingLarge ouiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template default is rendered with pageHeader 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone"
  >
    <header
      aria-label="aria-label"
      class="ouiPageHeader ouiPageHeader--paddingLarge ouiPageHeader--responsive ouiPage--restrictWidth-default ouiPageHeader--center testClass1 testClass2"
      data-test-subj="test subject string"
      title="Page title"
    />
    <div
      class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--plain ouiPanel--noShadow ouiPageContent ouiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="ouiPageContentBody ouiPage--paddingLarge ouiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template default minHeight is rendered 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:40vh"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone"
  >
    <div
      class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--plain ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="ouiPageContentBody ouiPage--paddingLarge ouiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template default paddingSize is rendered 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone"
  >
    <div
      class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--plain ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="ouiPageContentBody ouiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template default style is rendered 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:460px;max-height:100vh"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone"
  >
    <div
      class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--plain ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="ouiPageContentBody ouiPage--paddingLarge ouiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template default with pageSideBar is rendered 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    class="ouiPageSideBar ouiPageSideBar--paddingLarge ouiPageSideBar--sticky"
  >
    Side Bar
  </div>
  <div
    class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--plain ouiPanel--hasShadow ouiPageBody ouiPageBody--borderRadiusNone"
  >
    <div
      class="ouiPageBody ouiPageBody--borderRadiusNone ouiPageBody--paddingLarge"
    >
      <div
        class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--transparent ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--borderRadiusNone"
        role="main"
      >
        <div
          class="ouiPageContentBody ouiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template default with pageSideBar is rendered with pageSideBarProps 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="ouiPageSideBar ouiPageSideBar--paddingLarge ouiPageSideBar--sticky testClass1 testClass2"
    data-test-subj="test subject string"
  >
    Side Bar
  </div>
  <div
    class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--plain ouiPanel--hasShadow ouiPageBody ouiPageBody--borderRadiusNone"
  >
    <div
      class="ouiPageBody ouiPageBody--borderRadiusNone ouiPageBody--paddingLarge"
    >
      <div
        class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--transparent ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--borderRadiusNone"
        role="main"
      >
        <div
          class="ouiPageContentBody ouiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template empty is rendered 1`] = `
<div
  class="ouiPage ouiPage--paddingLarge ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone ouiPageBody--restrictWidth-default"
  >
    <div
      class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--transparent ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="ouiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template empty is rendered with pageBodyProps 1`] = `
<div
  class="ouiPage ouiPage--paddingLarge ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="ouiPageBody ouiPageBody--borderRadiusNone ouiPageBody--restrictWidth-default testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <div
      class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--transparent ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="ouiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template empty is rendered with pageContentBodyProps 1`] = `
<div
  class="ouiPage ouiPage--paddingLarge ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone ouiPageBody--restrictWidth-default"
  >
    <div
      class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--transparent ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        aria-label="aria-label"
        class="ouiPageContentBody testClass1 testClass2"
        data-test-subj="test subject string"
      />
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template empty is rendered with pageContentProps 1`] = `
<div
  class="ouiPage ouiPage--paddingLarge ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone ouiPageBody--restrictWidth-default"
  >
    <div
      aria-label="aria-label"
      class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--transparent ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--borderRadiusNone testClass1 testClass2"
      data-test-subj="test subject string"
      role="main"
    >
      <div
        class="ouiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template empty is rendered with pageHeader 1`] = `
<div
  class="ouiPage ouiPage--paddingLarge ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone ouiPageBody--restrictWidth-default"
  >
    <header
      aria-label="aria-label"
      class="ouiPageHeader ouiPageHeader--bottomBorder ouiPageHeader--responsive ouiPageHeader--center testClass1 testClass2"
      data-test-subj="test subject string"
      title="Page title"
    />
    <div
      class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--transparent ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="ouiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template empty minHeight is rendered 1`] = `
<div
  class="ouiPage ouiPage--paddingLarge ouiPage--grow ouiPageTemplate"
  style="min-height:40vh"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone ouiPageBody--restrictWidth-default"
  >
    <div
      class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--transparent ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="ouiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template empty paddingSize is rendered 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone ouiPageBody--restrictWidth-default"
  >
    <div
      class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--transparent ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="ouiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template empty style is rendered 1`] = `
<div
  class="ouiPage ouiPage--paddingLarge ouiPage--grow ouiPageTemplate"
  style="min-height:460px;max-height:100vh"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone ouiPageBody--restrictWidth-default"
  >
    <div
      class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--transparent ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="ouiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template empty with pageSideBar is rendered 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    class="ouiPageSideBar ouiPageSideBar--paddingLarge ouiPageSideBar--sticky"
  >
    Side Bar
  </div>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone ouiPageBody--paddingLarge"
  >
    <div
      class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--transparent ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="ouiPageContentBody ouiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate template empty with pageSideBar is rendered with pageSideBarProps 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="ouiPageSideBar ouiPageSideBar--paddingLarge ouiPageSideBar--sticky testClass1 testClass2"
    data-test-subj="test subject string"
  >
    Side Bar
  </div>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone ouiPageBody--paddingLarge"
  >
    <div
      class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--transparent ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="ouiPageContentBody ouiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`OuiPageTemplate with bottomBar is rendered 1`] = `
<div
  class="ouiPage ouiPage--grow ouiPageTemplate"
  style="min-height:460px"
>
  <div
    class="ouiPageBody ouiPageBody--borderRadiusNone"
  >
    <div
      class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--plain ouiPanel--noShadow ouiPanel--noBorder ouiPageContent ouiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="ouiPageContentBody ouiPage--paddingLarge ouiPage--restrictWidth-default"
      />
    </div>
    <section
      aria-label="Page level controls"
      class="ouiBottomBar ouiBottomBar--sticky"
      style="left:0;right:0;bottom:0"
    >
      <h2
        class="ouiScreenReaderOnly"
      >
        Page level controls
      </h2>
      <div
        class="ouiPageContentBody ouiPage--restrictWidth-default"
      >
        Bottom Bar
      </div>
    </section>
    <p
      aria-live="assertive"
      class="ouiScreenReaderOnly"
    >
      There is a new region landmark with page level controls at the end of the document.
    </p>
  </div>
</div>
`;
